incorporeted into 72MFPAD

--- a/OLD_ipynb/b1_map.ipynb
+++ b/OLD_ipynb/b1_map.ipynb
@@ -462,7 +462,7 @@
     "\n",
     "    ax.set_title(\"S CL-CR b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
@@ -505,7 +505,7 @@
     "        cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "        cbar.ax.set_ylabel('asymmetry')\n",
     "        if i==5:\n",
-    "            ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "            ax.set_xlabel('\\u03C6 [DEG]')\n",
     "\n",
     "    fig.tight_layout()\n",
     "\n",
@@ -574,7 +574,7 @@
     "    \n",
     "    ax.set_title(\"S CR-CL b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "    \n",
@@ -600,7 +600,7 @@
     "\n",
     "    ax.set_title(\"S CR-CL b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_xticks(xgo_uniq); ax.xaxis.set_tick_params(rotation=-45)\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_yticks(ygo_uniq)\n",
@@ -633,7 +633,7 @@
     "        cbar.ax.set_ylabel('asymmetry')\n",
     "    \n",
     "        if i==5:\n",
-    "            ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "            ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    \n",
     "    fig.tight_layout()\n",
     "    \n",
@@ -784,7 +784,7 @@
     "\n",
     "ax.set_title(\"R CR-CL b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax.set_xlabel('\\u03C6 [DEG]')\n",
     "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
@@ -809,7 +809,7 @@
     "\n",
     "ax.set_title(\"R CR-CL b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax.set_xlabel('\\u03C6 [DEG]')\n",
     "ax.set_xticks(xgo_uniq); ax.xaxis.set_tick_params(rotation=-45)\n",
     "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "ax.set_yticks(ygo_uniq)\n",
@@ -841,7 +841,7 @@
     "    cbar.ax.set_ylabel('asymmetry')\n",
     "\n",
     "    if i==5:\n",
-    "        ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "        ax.set_xlabel('\\u03C6 [DEG]')\n",
     "\n",
     "fig.tight_layout()\n",
     "\n",
@@ -918,7 +918,7 @@
     "\n",
     "ax.set_title(\"R CR-CL b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax.set_xlabel('\\u03C6 [DEG]')\n",
     "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
@@ -943,7 +943,7 @@
     "\n",
     "ax.set_title(\"R CR-CL b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax.set_xlabel('\\u03C6 [DEG]')\n",
     "ax.set_xticks(xgo_uniq); ax.xaxis.set_tick_params(rotation=-45)\n",
     "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "ax.set_yticks(ygo_uniq)\n",
@@ -975,7 +975,7 @@
     "    cbar.ax.set_ylabel('asymmetry')\n",
     "\n",
     "    if i==5:\n",
-    "        ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "        ax.set_xlabel('\\u03C6 [DEG]')\n",
     "\n",
     "fig.tight_layout()\n",
     "\n",
@@ -1167,7 +1167,7 @@
     "\n",
     "    ax.set_title(\"R - S b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
@@ -1194,7 +1194,7 @@
     "\n",
     "    ax.set_title(\"R - S b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_xticks(xgo_uniq); ax.xaxis.set_tick_params(rotation=-45)\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_yticks(ygo_uniq)\n",
@@ -1237,7 +1237,7 @@
     "        cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "        cbar.ax.set_ylabel('asymmetry')\n",
     "        if i==5:\n",
-    "            ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "            ax.set_xlabel('\\u03C6 [DEG]')\n",
     "\n",
     "    fig.tight_layout()\n",
     "\n",
@@ -1307,7 +1307,7 @@
     "\n",
     "    ax.set_title(\"R - S b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
@@ -1334,7 +1334,7 @@
     "\n",
     "    ax.set_title(\"R - S b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_xticks(xgo_uniq); ax.xaxis.set_tick_params(rotation=-45)\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_yticks(ygo_uniq)\n",
@@ -1367,7 +1367,7 @@
     "        cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "        cbar.ax.set_ylabel('asymmetry')\n",
     "        if i==5:\n",
-    "            ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "            ax.set_xlabel('\\u03C6 [DEG]')\n",
     "\n",
     "    fig.tight_layout()\n",
     "\n",
@@ -1440,7 +1440,7 @@
     "\n",
     "    ax.set_title(\"R - S b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
@@ -1467,7 +1467,7 @@
     "\n",
     "    ax.set_title(\"R - S b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_xticks(xgo_uniq); ax.xaxis.set_tick_params(rotation=-45)\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_yticks(ygo_uniq)\n",
@@ -1499,7 +1499,7 @@
     "        cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "        cbar.ax.set_ylabel('asymmetry')\n",
     "        if i==5:\n",
-    "            ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "            ax.set_xlabel('\\u03C6 [DEG]')\n",
     "\n",
     "    fig.tight_layout()\n",
     "\n",
