--- a/OLD_ipynb/b1_map_COPY.ipynb
+++ b/OLD_ipynb/b1_map_COPY.ipynb
@@ -476,7 +476,7 @@
     "\n",
     "    ax.set_title(\"S CL-CR b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
@@ -519,7 +519,7 @@
     "        cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "        cbar.ax.set_ylabel('asymmetry')\n",
     "        if i==5:\n",
-    "            ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "            ax.set_xlabel('\\u03C6 [DEG]')\n",
     "\n",
     "    fig.tight_layout()\n",
     "\n",
@@ -588,7 +588,7 @@
     "    \n",
     "    ax.set_title(\"S CR-CL b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "    \n",
@@ -614,7 +614,7 @@
     "\n",
     "    ax.set_title(\"S CR-CL b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_xticks(xgo_uniq); ax.xaxis.set_tick_params(rotation=-45)\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_yticks(ygo_uniq)\n",
@@ -647,7 +647,7 @@
     "        cbar.ax.set_ylabel('asymmetry')\n",
     "    \n",
     "        if i==5:\n",
-    "            ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "            ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    \n",
     "    fig.tight_layout()\n",
     "    \n",
@@ -866,7 +866,7 @@
     "\n",
     "ax.set_title(\"R CR-CL b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax.set_xlabel('\\u03C6 [DEG]')\n",
     "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
@@ -909,7 +909,7 @@
     "\n",
     "ax.set_title(\"R CR-CL b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax.set_xlabel('\\u03C6 [DEG]')\n",
     "ax.set_xticks(xgo_uniq); ax.xaxis.set_tick_params(rotation=-45)\n",
     "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "ax.set_yticks(ygo_uniq)\n",
@@ -941,7 +941,7 @@
     "    cbar.ax.set_ylabel('asymmetry')\n",
     "\n",
     "    if i==5:\n",
-    "        ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "        ax.set_xlabel('\\u03C6 [DEG]')\n",
     "\n",
     "fig.tight_layout()\n",
     "\n",
@@ -1044,7 +1044,7 @@
     "\n",
     "ax.set_title(\"R CR-CL b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax.set_xlabel('\\u03C6 [DEG]')\n",
     "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
@@ -1087,7 +1087,7 @@
     "\n",
     "ax.set_title(\"R CR-CL b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax.set_xlabel('\\u03C6 [DEG]')\n",
     "ax.set_xticks(xgo_uniq); ax.xaxis.set_tick_params(rotation=-45)\n",
     "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "ax.set_yticks(ygo_uniq)\n",
@@ -1119,7 +1119,7 @@
     "    cbar.ax.set_ylabel('asymmetry')\n",
     "\n",
     "    if i==5:\n",
-    "        ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "        ax.set_xlabel('\\u03C6 [DEG]')\n",
     "\n",
     "fig.tight_layout()\n",
     "\n",
@@ -1311,7 +1311,7 @@
     "\n",
     "    ax.set_title(\"R - S b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
@@ -1336,7 +1336,7 @@
     "\n",
     "    ax.set_title(\"R - S b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_xticks(xgo_uniq)\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_yticks(ygo_uniq)\n",
@@ -1377,7 +1377,7 @@
     "        cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "        cbar.ax.set_ylabel('asymmetry')\n",
     "        if i==5:\n",
-    "            ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "            ax.set_xlabel('\\u03C6 [DEG]')\n",
     "\n",
     "    fig.tight_layout()\n",
     "\n",
@@ -1447,7 +1447,7 @@
     "\n",
     "    ax.set_title(\"R - S b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
@@ -1495,7 +1495,7 @@
     "\n",
     "    ax.set_title(\"R - S b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_xticks(xgo_uniq)\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_yticks(ygo_uniq)\n",
@@ -1528,7 +1528,7 @@
     "        cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "        cbar.ax.set_ylabel('asymmetry')\n",
     "        if i==5:\n",
-    "            ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "            ax.set_xlabel('\\u03C6 [DEG]')\n",
     "\n",
     "    fig.tight_layout()\n",
     "\n",
@@ -1601,7 +1601,7 @@
     "\n",
     "    ax.set_title(\"R - S b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
@@ -1628,7 +1628,7 @@
     "\n",
     "    ax.set_title(\"R - S b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
     "    ax.set_xticks(xgo_uniq); ax.xaxis.set_tick_params(rotation=-45)\n",
     "    ax.set_ylabel('cos(\\u03D1) [adm]')\n",
     "    ax.set_yticks(ygo_uniq)\n",
@@ -1660,7 +1660,7 @@
     "        cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "        cbar.ax.set_ylabel('asymmetry')\n",
     "        if i==5:\n",
-    "            ax.set_xlabel('\\u03D5 [DEG]')\n",
+    "            ax.set_xlabel('\\u03C6 [DEG]')\n",
     "\n",
     "    fig.tight_layout()\n",
     "\n",
