new labels and small modifications

--- a/Ar_calibration.ipynb
+++ b/Ar_calibration.ipynb
@@ -208,7 +208,7 @@
     "\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
-    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_xlabel('cos\\u03D1 [adm]')\n",
     "ax.set_ylabel('kinetc energy photoelectrons [eV]')\n",
     "ax.set_ylim([0., 15.])\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
