--- a/N2_calibration.ipynb
+++ b/N2_calibration.ipynb
@@ -98,7 +98,7 @@
     "\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "\n",
-    "ax.plot(en,KER, color=cmap_viridis(0), linewidth=3, alpha = 0.6,)\n",
+    "ax.plot(en,KER, color=cmap_viridis(0), linewidth=3, alpha = 0.6)\n",
     "ax.plot(en_masked,gaus_fit(en_masked,*popt), color=cmap_viridis(0.3), ls=\"--\",linewidth=2, label=\"Gaussian fit\")\n",
     "plt.plot([], [], ' ', label=fit_info)\n",
     "\n",
@@ -159,8 +159,8 @@
     "\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
-    "ax.set_xlabel('phi [DEG]')\n",
-    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "ax.set_xlabel('\\u03C6 [DEG]')\n",
+    "ax.set_ylabel('cos\\u03D1 [adm]')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
@@ -185,8 +185,8 @@
     "aspect=(phi_mol1D.max()/ctheta_mol.max())\n",
     "cs,ax=fugi.plot_interpolation(phi_mol2D,ctheta_mol,MFPAD3D.T,ax=ax, xstep=0.1, ystep=0.01)\n",
     "\n",
-    "ax.set_xlabel('phi [DEG]')\n",
-    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "ax.set_xlabel('\\u03C6 [DEG]')\n",
+    "ax.set_ylabel('cos\\u03D1 [adm]')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
@@ -291,7 +291,7 @@
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
     "cbar.ax.set_ylabel('normalized counts')\n",
     "\n",
-    "fig.savefig(dir+\"ionmom_N-N.png\", bbox_inches='tight', dpi=300, transparent=False, bbox_inches='tight')\n",
+    "fig.savefig(dir+\"ionmom_N-N.png\", bbox_inches='tight', dpi=300, transparent=False, box_inches='tight')\n",
     "# fig.savefig(dir+\"ionmom_N-N.svg\", bbox_inches='tight', dpi=300, transparent=False, bbox_inches='tight')"
    ]
   },
@@ -352,6 +352,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "phi_full_n2 = phi_full; phi_rad_n2 = phi_rad; ctheta_full_n2 = ctheta_full; theta_rad_n2 = theta_rad\n",
+    "%store phi_full_n2\n",
+    "%store phi_mol2D\n",
+    "%store ctheta_full_n2\n",
+    "%store ctheta_mol\n",
+    "%store MFPAD3D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig = plt.figure(figsize=(20,20))\n",
     "# fig, ax = plt.subplots(subplot_kw={\"projection\": \"3d\"})\n",
     "ax = fig.add_subplot(111, projection = \"3d\", )\n",
@@ -385,37 +399,6 @@
     "ani.save(\"OUTPUTS/N-N.mp4\", fps =15, writer=\"ffmpeg\")\n",
     "# HTML(ani.to_html5_video())\n",
     "plt.show(False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "from scipy.spatial import ConvexHull\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "# fig, ax = plt.subplots(subplot_kw={\"projection\": \"3d\"})\n",
-    "ax1 = fig.add_subplot(111, projection = \"3d\", )\n",
-    "\n",
-    "points_orig = np.vstack((x, y, z)).T\n",
-    "ind = np.argsort(d)\n",
-    "points= np.take_along_axis(points_orig, np.vstack((ind,ind,ind)).T, axis=0)\n",
-    "\n",
-    "hull=ConvexHull(points, qhull_options=\"QJ Pp\")\n",
-    "\n",
-    "# Plot defining corner points\n",
-    "ax1.plot(points.T[0], points.T[1], points.T[2], \"ko\")\n",
-    "\n",
-    "# 12 = 2 * 6 faces are the simplices (2 simplices per square face)\n",
-    "for s in hull.simplices:\n",
-    "    s = np.append(s, s[0])  # Here we cycle back to the first coordinate\n",
-    "    ax1.plot(points[s, 0], points[s, 1], points[s, 2], \"r-\")\n",
-    "\n",
-    "# Make axis label\n",
-    "for i in [\"x\", \"y\", \"z\"]:\n",
-    "    eval(\"ax.set_{:s}label('{:s}')\".format(i, i))\n",
-    "\n",
-    "plt.show()\n"
    ]
   },
   {
