--- a/diatomic_ALLCH.ipynb
+++ b/diatomic_ALLCH.ipynb
@@ -49,8 +49,8 @@
     "fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_550eV_CL_ALLCH_diatomic.root\")\n",
     "fileSCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_550eV_CR_ALLCH_diatomic.root\")\n",
     "fileSCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_550eV_CL_ALLCH_diatomic.root\")\n",
-    "CH=\"ALL_CH\";\n",
-    "# CH=\"CH14\";\n",
+    "# CH=\"ALL_CH\";\n",
+    "CH=\"CH14\";\n",
     "\n",
     "# # 546eV - 8.2eV\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CR_ALLCH_diatomic.root\");en=\"546eV\";\n",
@@ -78,6 +78,7 @@
     "\n",
     "#True to use the MFPAD projection (16,) instead of ctheta (30,)\n",
     "projection=False\n",
+    "comparison=True\n",
     "\n",
     "if CH==\"ALL_CH\":\n",
     "    # path = \"angular_distr_el/\"+CH+\"/test\"\n",
@@ -450,9 +451,53 @@
     "aspect=(custom_xlim[1]/custom_ylim[1])\n",
     "ax.set_aspect(aspect)\n",
     "\n",
-    "m\n",
     "\n",
     "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_random_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if comparison:\n",
+    "    # fumi = reload(fumi)\n",
+    "    exp_MOx= pd.read_csv('../PYTHON_graphs/DATA/exp_1DPECD_MOx.csv', delimiter=\";\", decimal=\".\")\n",
+    "    ctheta_Mox=np.flip(np.cos(exp_MOx[\"gamma\"]/180.*np.pi).values)\n",
+    "\n",
+    "    def rnd_curve(x):\n",
+    "        return (-1.35*x/(1-0.8166/2*(3*x**2-1)/2))/100\n",
+    "\n",
+    "    x=np.linspace(-1,1,50)\n",
+    "    fig, (ax1,ax2) = plt.subplots(1,2, figsize=(10, 5.5), sharey=True, constrained_layout=True)\n",
+    "    fumi.plotminuit2(x_data,y_data,y_err/2,m,ax1,xlim=[-1,1], ylim=custom_ylim, nlabel=\"PECD fit\")\n",
+    "    ax2.plot(x,rnd_curve(x),\"--\", label=\"theoretical fit\")\n",
+    "    ax2.errorbar(ctheta_Mox,np.flip((exp_MOx[\"value_R29A\"]/100).values),yerr=np.flip((exp_MOx[\"error\"]/100).values),fmt=\"o\")\n",
+    "    ax2.axhline(0, color='black', alpha=0.2, lw=2)\n",
+    "    \n",
+    "    ax1.set_title(\"R-TFMOx \")\n",
+    "    ax2.set_title(\"S-MOx \")\n",
+    "    ax1.set_aspect(\"equal\",'datalim')\n",
+    "    ax1.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "    ax2.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "    ax1.set_ylabel('PECD')\n",
+    "    ax2.set_ylim([-0.04,0.06])\n",
+    "    ax2.set_xlim([None,None])\n",
+    "    # ax1.grid();ax2.grid()\n",
+    "    ax2.tick_params(labelsize=20)\n",
+    "    ax1.tick_params(labelsize=20)\n",
+    "\n",
+    "    ax1.plot([], [], ' ', label=fit_info[0]+\"\\n\"+fit_info[1])\n",
+    "    ax1.legend(loc=\"best\")\n",
+    "\n",
+    "    ax2.plot([], [], ' ', label=\"$b1_{th}$ = 0.0156 \\u00b1 0.002 \\n$b2_{th}$ = 0.654 \\u00b1 0.072\")\n",
+    "    ax2.legend(loc=\"best\")\n",
+    "\n",
+    "    aspect=(custom_xlim[1]/custom_ylim[1])\n",
+    "    ax1.set_aspect(aspect)\n",
+    "\n",
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_random_VS_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')\n"
    ]
   },
   {
@@ -491,7 +536,7 @@
     "    fit_info = []\n",
     "    for p, v, e in zip(m.parameters, m.values, m.errors):\n",
     "        fit_info.append(f\"{p} = ${v:.3f} \\\\pm {e:.3f}$\")\n",
-    "\n",
+    "    \n",
     "    ax.legend(title=\"\\n\".join(fit_info), loc=\"best\")\n",
     "\n",
     "    aspect=(custom_xlim[1]/custom_ylim[1])\n",
@@ -500,6 +545,50 @@
     "    print(m)\n",
     "\n",
     "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_pol_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if comparison and CH == \"CH14\":\n",
+    "    # fumi = reload(fumi)\n",
+    "    exp_MOx= pd.read_csv('../PYTHON_graphs/DATA/exp_1DPECD_MOx.csv', delimiter=\";\", decimal=\".\")\n",
+    "    ctheta_Mox=np.flip(np.cos(exp_MOx[\"gamma\"]/180.*np.pi).values)\n",
+    "    th_MOx= pd.read_csv('../PYTHON_graphs/DATA/th_1DPECD_MOx.csv', delimiter=\";\", decimal=\",\")\n",
+    "    x=np.linspace(-1,1,50)\n",
+    "\n",
+    "    fig, (ax1,ax2) = plt.subplots(1,2, figsize=(10, 5.5), sharey=True, constrained_layout=True)\n",
+    "\n",
+    "    fumi.plotminuit2(x_data,y_data,y_err,m,ax1,xlim=[-1,1], ylim=custom_ylim, nlabel=\"PECD fit\")\n",
+    "    ax2.plot(np.flip((th_MOx[\"ctheta\"]).values),np.flip((th_MOx[\"value\"]/100).values),\"--\", label=\"theoretical fit\")\n",
+    "    ax2.errorbar(ctheta_Mox,np.flip((exp_MOx[\"value_42151A\"]/100).values),yerr=np.flip((exp_MOx[\"error.1\"]/100).values),fmt=\"o\")\n",
+    "    ax2.axhline(0, color='black', alpha=0.2, lw=2)\n",
+    "    \n",
+    "    ax1.set_title(\"R-TFMOx\")\n",
+    "    ax2.set_title(\"S-MOx\")\n",
+    "    ax1.set_aspect(\"equal\",'datalim')\n",
+    "    ax1.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "    ax2.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "    ax1.set_ylabel('PECD')\n",
+    "    ax2.set_xlim([None,None])\n",
+    "    # ax1.grid();ax2.grid()\n",
+    "    ax2.set_ylim([-0.15,0.2])\n",
+    "    ax2.tick_params(labelsize=20)\n",
+    "    ax1.tick_params(labelsize=20)\n",
+    "\n",
+    "    ax1.plot([], [], ' ', label=fit_info[0]+\"\\n\"+fit_info[1])\n",
+    "    ax1.legend(loc=\"best\")\n",
+    "\n",
+    "    ax2.plot([], [], ' ', label=\"$b1_{th}$ = 0.123 \\u00b1 0.002 \\n$b2_{th}$ = 0.854 \\u00b1 0.072\")\n",
+    "    ax2.legend(loc=\"best\")\n",
+    "    \n",
+    "    aspect=(custom_xlim[1]/custom_ylim[1])\n",
+    "    ax1.set_aspect(aspect)\n",
+    "\n",
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_pol_VS_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False, bbox_inches='tight')\n"
    ]
   },
   {
@@ -564,9 +653,12 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+  },
   "kernelspec": {
    "display_name": "Python 3.8.10 64-bit ('base': conda)",
-   "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
