--- a/double_ionization.ipynb
+++ b/double_ionization.ipynb
@@ -827,7 +827,7 @@
     "cs1=ax1.pcolormesh(phiM,cthetaM,MFPAD_SCL.T,shading='auto', cmap=cmap_temp)\n",
     "fig.suptitle(title+\" MFPAD @ 33 eV\",y=0.85)\n",
     "ax1.set_title(\"S CL\")\n",
-    "ax1.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax1.set_xlabel('\\u03C6 [DEG]')\n",
     "ax1.set_ylabel('cos(\\u03D1) [adm]')\n",
     "# cbar = fig.colorbar(cs1,shrink=0.9, ax=ax1)\n",
     "# cbar.ax.set_ylabel('PECD')\n",
@@ -835,7 +835,7 @@
     "\n",
     "cs2=ax2.pcolormesh(phiM,cthetaM,MFPAD_SCR.T,shading='auto', cmap=cmap_temp)\n",
     "ax2.set_title(\"S CR\")\n",
-    "ax2.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax2.set_xlabel('\\u03C6 [DEG]')\n",
     "# ax2.set_ylabel('cos(\\u03D1) [adm]')\n",
     "ax2.set_aspect(aspect)\n",
     "\n",
@@ -858,7 +858,7 @@
     "cs1=ax1.pcolormesh(phiM,cthetaM,MFPAD_RCL.T,shading='auto', cmap=cmap_temp)\n",
     "fig.suptitle(title+\" MFPAD @ 33 eV\",y=0.85)\n",
     "ax1.set_title(\"R CL\")\n",
-    "ax1.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax1.set_xlabel('\\u03C6 [DEG]')\n",
     "ax1.set_ylabel('cos(\\u03D1) [adm]')\n",
     "# cbar = fig.colorbar(cs1,shrink=0.9, ax=ax1)\n",
     "# cbar.ax.set_ylabel('PECD')\n",
@@ -866,7 +866,7 @@
     "\n",
     "cs2=ax2.pcolormesh(phiM,cthetaM,MFPAD_RCR.T,shading='auto', cmap=cmap_temp)\n",
     "ax2.set_title(\"R CR\")\n",
-    "ax2.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax2.set_xlabel('\\u03C6 [DEG]')\n",
     "# ax2.set_ylabel('cos(\\u03D1) [adm]')\n",
     "ax2.set_aspect(aspect)\n",
     "\n",
@@ -890,7 +890,7 @@
     "cs1=ax1.pcolormesh(phiM,cthetaM,MFPAD_R.T, shading='auto', cmap=cmap_temp)\n",
     "fig.suptitle(title+\" MFPAD @ 33 eV\",y=0.85)\n",
     "ax1.set_title(\"R\")\n",
-    "ax1.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax1.set_xlabel('\\u03C6 [DEG]')\n",
     "ax1.set_ylabel('cos(\\u03D1) [adm]')\n",
     "# cbar = fig.colorbar(cs1,shrink=0.9, ax=ax1)\n",
     "# cbar.ax.set_ylabel('PECD')\n",
@@ -899,7 +899,7 @@
     "# cs2,ax2=fugi.plot_interpolation(phiM,cthetaM,MFPAD_S.T, xstep=0.01, ystep=0.01, ax=ax2, cmap=cmap_temp, gaussian=10.)\n",
     "cs2=ax2.pcolormesh(phiM,cthetaM,MFPAD_S.T, shading='auto', cmap=cmap_temp)\n",
     "ax2.set_title(\"S\")\n",
-    "ax2.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax2.set_xlabel('\\u03C6 [DEG]')\n",
     "# ax2.set_ylabel('cos(\\u03D1) [adm]')\n",
     "ax2.set_aspect(aspect)\n",
     "\n",
@@ -922,7 +922,7 @@
     "cs1=ax1.pcolormesh(phiM,cthetaM,MFPAD_tot_RS.T,cmap=cmap_temp) #shading='auto'\n",
     "fig.suptitle(title+\" contrast map R-S @ 33 eV\",y=0.85)\n",
     "ax1.set_title(\"original\")\n",
-    "ax1.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax1.set_xlabel('\\u03C6 [DEG]')\n",
     "ax1.set_ylabel('cos(\\u03D1) [adm]')\n",
     "# cbar = fig.colorbar(cs1,shrink=0.9, ax=ax1)\n",
     "# cbar.ax.set_ylabel('PECD')\n",
@@ -930,7 +930,7 @@
     "\n",
     "cs2,ax2=fugi.plot_interpolation(phiM,cthetaM,MFPAD_tot_RS.T, xstep=0.05, ystep=0.05, ax=ax2, cmap=cmap_temp, gaussian=10.)\n",
     "ax2.set_title(\"smooth\")\n",
-    "ax2.set_xlabel('\\u03D5 [DEG]')\n",
+    "ax2.set_xlabel('\\u03C6 [DEG]')\n",
     "# ax2.set_ylabel('cos(\\u03D1) [adm]')\n",
     "ax2.set_aspect(aspect)\n",
     "\n",
