--- a/lens_strength.ipynb
+++ b/lens_strength.ipynb
@@ -192,7 +192,7 @@
     "# ax.scatter(table.loc[second_2, \"TOF_200ps\"]*10**3, table.loc[second_2,\"Z\"], color= cmap_viridis(0), alpha=0.6)\n",
     "# ax.scatter(table.loc[second_3, \"TOF_200ps\"]*10**3, table.loc[second_3,\"Z\"], color= cmap_viridis(0), alpha=0.6)\n",
     "\n",
-    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_xlabel('cos\\u03D1 [adm]')\n",
     "# ax.set_xlim(-1.,1.)\n",
     "ax.set_ylabel('monetum magnitude [a.u.]')\n",
     "# fig.savefig(dir+\"lens_effect_cos(theta).svg\", dpi=144, transparent=False)\n",
@@ -218,7 +218,7 @@
     "ax.scatter(table.loc[fourth, \"cos(theta)_tof\"], table.loc[fourth,\"mom.mag\"], color= \"black\", s= 1, alpha=0.4)\n",
     "\n",
     "\n",
-    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_xlabel('cos\\u03D1 [adm]')\n",
     "# ax.set_xlim(-1.,1.)\n",
     "ax.set_xlim(-.99,.99)\n",
     "ax.set_ylabel('monetum magnitude [a.u.]')\n",
@@ -249,7 +249,7 @@
     "ax.scatter(table.loc[fourth, \"cos(theta)_tof\"], table.loc[fourth,\"KE_calc\"], color= \"black\", s= 1, alpha=0.4)\n",
     "\n",
     "\n",
-    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_xlabel('cos\\u03D1 [adm]')\n",
     "# ax.set_xlim(-1.,1.)\n",
     "ax.set_xlim(-.99,.99)\n",
     "ax.set_ylabel('kinetic energy [eV]')\n",
@@ -353,7 +353,7 @@
     "ax.scatter(table2.loc[fourth2, \"cos(theta)_tof\"], table2.loc[fourth2,\"KE_calc\"], color= \"black\", s= 1, alpha=0.4)\n",
     "\n",
     "\n",
-    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_xlabel('cos\\u03D1 [adm]')\n",
     "# ax.set_xlim(-1.,1.)\n",
     "ax.set_xlim(-.99,.99)\n",
     "ax.set_ylabel('kinetic energy [eV]')\n",
