--- a/N2_calibration.ipynb
+++ b/N2_calibration.ipynb
@@ -190,9 +190,10 @@
     "ax.set_aspect(aspect)\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
-    "cbar.set_ticks([MFPAD3D.min()*1.03,MFPAD3D.max()*1.001])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar.ax.set_ylabel('normalized counts')\n",
+    "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
+    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "# cbar.set_ticks([MFPAD3D.min()*1.03,MFPAD3D.max()*1.001])\n",
+    "cbar.ax.set_ylabel('absolute counts')\n",
     "\n",
     "fig.savefig(dir+\"MFPAD3d.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "# fig.savefig(dir+\"MFPAD3d.svg\", dpi=300, transparent=False)"
@@ -236,9 +237,11 @@
     "cax = fig.add_axes([1.02, 0.20, 0.01, 0.58])\n",
     "cbar = fig.colorbar(cs3,shrink=0.9, cax=cax)\n",
     "# cbar= fig.colorbar(cs3,fraction=0.05, pad=0.04) # in case the previous doesn't work\n",
-    "cbar.set_ticks([np.ma.masked_array(p_rel_xy.T,p_rel_xy.T<3).min(),p_rel_xz.max()*1.03])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar.ax.set_ylabel('normalized counts')\n",
+    "# cbar.set_ticks([np.ma.masked_array(p_rel_xy.T,p_rel_xy.T<3).min(),p_rel_xz.max()*1.03])\n",
+    "cbar.set_ticks([cs3.get_array().min(),cs3.get_array().max()])\n",
+    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.ax.set_ylabel('absolute counts')\n",
+    "\n",
     "\n",
     "fig.savefig(dir+\"prel_N-N.png\", bbox_inches='tight', dpi=300, transparent=False)\n",
     "# fig.savefig(dir+\"prel_N-N.svg\", bbox_inches='tight', dpi=300, transparent=False)"
@@ -286,13 +289,13 @@
     "\n",
     "cax = fig.add_axes([1.02, 0.20, 0.01, 0.58])\n",
     "cbar = fig.colorbar(cs3,shrink=0.9, cax=cax)\n",
-    "# cbar= fig.colorbar(cs3,fraction=0.05, pad=0.04) # in case the previous doesn't work\n",
-    "cbar.set_ticks([p12_z.T.min()+4,p12_z.max()])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar.ax.set_ylabel('normalized counts')\n",
+    "cbar.set_ticks([cs3.get_array().min(),cs3.get_array().max()])\n",
+    "# cbar.set_ticks([p12_z.T.min()+4,p12_z.max()])\n",
+    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.ax.set_ylabel('absolute counts')\n",
     "\n",
-    "fig.savefig(dir+\"ionmom_N-N.png\", bbox_inches='tight', dpi=300, transparent=False, box_inches='tight')\n",
-    "# fig.savefig(dir+\"ionmom_N-N.svg\", bbox_inches='tight', dpi=300, transparent=False, bbox_inches='tight')"
+    "fig.savefig(dir+\"ionmom_N-N.png\", bbox_inches='tight', dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"ionmom_N-N.svg\", bbox_inches='tight', dpi=300, transparent=False)"
    ]
   },
   {
@@ -410,12 +413,23 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+  },
   "kernelspec": {
    "display_name": "Python 3.8.10 64-bit ('base': conda)",
-   "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
   "metadata": {
