--- a/Ar_calibration.ipynb
+++ b/Ar_calibration.ipynb
@@ -126,11 +126,11 @@
     "ax.set_xlim([14.75, 17.4])\n",
     "ax.set_ylabel('y-axis [mm]')\n",
     "ax.set_ylim([-40., 40.])\n",
-    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "\n",
-    "cbar.set_ticks([fish_fillet_y_masked.min(),fish_fillet_y_masked.max()])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar.ax.set_ylabel('normalized counts')\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
+    "# cbar.set_ticks([fish_fillet_y_masked.min(),fish_fillet_y_masked.max()])\n",
+    "cbar.ax.set_ylabel('absolute counts')\n",
     "\n",
     "fig.savefig(dir+\"fish_fillet_y.png\", dpi=300, transparent=False)\n",
     "# fig.savefig(dir+\"fish_fillet_y.svg\", dpi=300, transparent=False)"
@@ -156,11 +156,11 @@
     "ax.set_xlim([14.75, 17.4])\n",
     "ax.set_ylabel('y-axis [mm]')\n",
     "ax.set_ylim([-40., 40.])\n",
-    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "\n",
-    "cbar.set_ticks([fish_fillet_x_masked.min(),fish_fillet_x_masked.max()])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar.ax.set_ylabel('normalized counts')\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
+    "# cbar.set_ticks([fish_fillet_x_masked.min(),fish_fillet_x_masked.max()])\n",
+    "cbar.ax.set_ylabel('absolute counts')\n",
     "\n",
     "fig.savefig(dir+\"fish_fillet_x.png\", dpi=300, transparent=False)\n",
     "# fig.savefig(dir+\"fish_fillet_x.svg\", dpi=300, transparent=False)"
@@ -211,11 +211,11 @@
     "ax.set_xlabel('cos\\u03D1 [adm]')\n",
     "ax.set_ylabel('kinetc energy photoelectrons [eV]')\n",
     "ax.set_ylim([0., 15.])\n",
-    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "\n",
-    "cbar.set_ticks([cthetaEE_masked.min(),cthetaEE_masked.max()])\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar.ax.set_ylabel('normalized counts')\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
+    "# cbar.set_ticks([cthetaEE_masked.min(),cthetaEE_masked.max()])\n",
+    "cbar.ax.set_ylabel('absolute counts')\n",
     "\n",
     "fig.savefig(dir+\"ctheta_EE.png\", dpi=300, transparent=False)\n",
     "# fig.savefig(dir+\"ctheta_EE.svg\", dpi=300, transparent=False)"
@@ -257,9 +257,12 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+  },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
-   "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   "display_name": "Python 3.8.10 64-bit ('base': conda)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -271,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   },
   "metadata": {
    "interpreter": {
